    <kozlov.y@gmail.com> (closes: #448938).
  * Applied a patch by Steffen Joeris <steffen.joeris@skolelinux.de> for a
    security vulnerability (CVE-2007-5156) in the copy of FCKeditor
    embedded in gforge-plugins-extra (closes: #447590).
  * SVN r6169 also fixes a few denial of service and file truncation
    vulnerabilities (CVE-2007-3921).
  * Added Vcs-Bzr: field to debian/control.

 -- Roland Mas <lolando@debian.org>  Tue, 06 Nov 2007 13:47:21 +0100

gforge (4.6.99+svn6094-4) unstable; urgency=low

  * Fixed a few script permissions and shebangs.
  * gforge-mta-courier should really depend on courier-mta.
  * Updated debian/po/de.po, from Helge Kreutzmann <debian@helgefjell.de>
    (closes: #444615).
  * Updated changelog entry for version 4.6.99+svn6094-1 to include the
    CVE ID.
  * Collect SVN stats every day, not only on Sundays.

 -- Roland Mas <lolando@debian.org>  Wed, 17 Oct 2007 15:22:56 +0200

gforge (4.6.99+svn6094-3) unstable; urgency=low

  * Merged in a patch from Christian Perrier and the Debian i18n and
    English l10n team, bringing better style to Debconf templates.
  * Also fixed encoding problems in debian/po/fr.po.

 -- Roland Mas <lolando@debian.org>  Wed, 26 Sep 2007 17:46:07 +0200

gforge (4.6.99+svn6094-2) unstable; urgency=low

  * Added Homepage: field to debian/control.
  * debian/patches/use-snoopy-from-distro.dpatch: Use the Snoopy class as
    provided by libphp-snoopy rather than shipping our own copy of it
    (closes: #443951).
  * Removed local copies from the binary packages, to be extra sure.
  * Updated debian/po/de.po, from Helge Kreutzmann <debian@helgefjell.de>
    (closes: #441250).
  * Make sure there's at least a dummy SSL certificate set up, even if
    it's the Snake Oil cert; the admin is expected to replace it with a
    real cert if possible, but this should ensure the initial SSL setup is
    at least working (closes: #433826).

 -- Roland Mas <lolando@debian.org>  Wed, 26 Sep 2007 15:44:35 +0200
